src/objects/jj_rb_Estimated_Rebate_Accrual__c.object
<CustomObject>
    <fields>
        <fullName>jj_rb_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Estimate_Rebate_Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Description__c</fullName>
        <formula>jj_rb_Rebate_Product__r.jj_rb_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Estimated_Accrual__c</fullName>
        <label>Estimated Accrual</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Master_Data_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Master Data Request</label>
        <referenceTo>jj_rb_Master_Data_Request__c</referenceTo>
        <relationshipLabel>Estimated Rebate Accruals</relationshipLabel>
        <relationshipName>Estimated_Rebate_Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rebate Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipName>Estimate_Rebate_Accruals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Estimated Rebate Accrual</label>
    <nameField>
        <displayFormat>ERA-{000}</displayFormat>
        <label>Estimated Rebate Accrual Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimated Rebate Accruals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>